--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-tensorflow
-numpy
-keras
-flask
-opencv-python
+tensorflow>=2.0.0
+flask~=2.0.0
+opencv-python~=4.5.3.56
 sklearn
 matplotlib>=3.0.2
 scipy>=1.2.0
