--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-tensorflow
-numpy
-keras
+scipy==1.3.1
+tensorflow==1.14
+keras==2.1.2
 flask
 opencv-python
-sklearn
+sklearn==0.21.3
 matplotlib>=3.0.2
-scipy>=1.2.0
